[package]
name = "tbunread"
version = "0.0.9"
authors = ["eikendev"]
edition = "2024"
description = "Helps you to keep an eye on unread emails in Thunderbird."
homepage = "https://github.com/eikendev/tbunread"
repository = "https://github.com/eikendev/tbunread.git"
readme = "README.md"
license = "ISC"

[dependencies]
anyhow = "1.0.41"
argh = "0.1.4"
dirs = "3.0.2"
env_logger = "0.8.3"
glob = "0.3.0"
human-panic = "2.0.4"
lazy_static = "1.4.0"
log = "0.4.14"
notify = "4.0.17"
regex = "1.5.4"
rust-ini = "0.17.0"
sysinfo = "0.20.3"
